fixed small text jump in code table header

--- a/css/github.css
+++ b/css/github.css
@@ -11,6 +11,7 @@
 body {
     /*! width: 90%; */
     /*! background-color: #2a2730; */
+    word-wrap: break-word;
 }
 
 .grid-item { 
@@ -42,12 +43,17 @@ a:hover {
     text-decoration-color: #FF375A;
     
 }
+
+.content a {
+  font-size: 1.2em;
+}
+
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
-    font-size: 1.2em;
+    font-size: 1.0em;
     line-height: 1.2em;
     color: #333;
 }
